update theme test file

--- a/Test/Theme.html
+++ b/Test/Theme.html
@@ -8,9 +8,11 @@
 	</head>
 
 	<body>
-		<div id="demon" data-name="demon">
-			<demon>&amp</demon>
-            <!--comment-->
-		</div>
+		<!-- HTML Elements and Attributes -->
+		<div id="demon" class="people">example text</div>
+		<!-- Special characters -->
+		<div>&amp</div>
+		<!-- undefined tag and attribute -->
+		<people data-name="demon"></people>
 	</body>
 </html>
